crates/aquascope/tests/snapshots/boundaries__main@captured_0.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: main@captured_0.test
---
- location:
    line: 9
    column: 30
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
- location:
    line: 11
    column: 7
  expected:
    read: true
    write: false
    drop: true
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
    loan_refined:
      Write:
        key: 0
    loan_drop_refined: 0
