crates/aquascope/tests/snapshots/boundaries__missing_constraint@missing_constraint.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: missing_constraint@missing_constraint.test
---
- location:
    line: 2
    column: 2
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
  expecting_flow:
    is_violation: true
    flow_context:
      start:
        line: 2
        column: 2
      end:
        line: 2
        column: 3
      filename:
        private_use_as_methods_instead: 0
    kind: MissingUniversalConstraint
