crates/aquascope/tests/snapshots/boundaries__mut_arr@array.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: mut_arr@array.test
---
- location:
    line: 7
    column: 2
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: true
    drop: true
  data:
    type_droppable: true
    type_writeable: true
    type_copyable: true
    is_live: true
    path_uninitialized: false
