crates/aquascope/tests/snapshots/boundaries__mut_bx@box.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: mut_bx@box.test
---
- location:
    line: 7
    column: 2
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: true
    drop: false
  data:
    type_droppable: false
    type_writeable: true
    type_copyable: true
    is_live: true
    path_uninitialized: false
