crates/aquascope/tests/snapshots/boundaries__mut_slice@array.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: mut_slice@array.test
---
- location:
    line: 17
    column: 2
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: true
    drop: false
  data:
    type_droppable: false
    type_writeable: true
    type_copyable: true
    is_live: true
    path_uninitialized: false
