crates/aquascope/tests/snapshots/boundaries__print_first@type-driven-flows.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: print_first@type-driven-flows.test
---
- location:
    line: 11
    column: 15
  expected:
    read: true
    write: false
    drop: false
  actual:
    type_droppable: false
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: false
      drop: false
- location:
    line: 12
    column: 17
  expected:
    read: true
    write: false
    drop: false
  actual:
    type_droppable: true
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: false
      drop: true

