crates/aquascope/tests/snapshots/boundaries__slice@array.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: slice@array.test
---
- location:
    line: 12
    column: 2
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
